Fix usage of end time for schedules when there could be none