@@ -10,7 +10,6 @@ import java.io.Serializable;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Entity
 @NoArgsConstructor
@@ -32,14 +31,15 @@ public class WeeklyPosology implements Serializable {
     @Column(name = "start_date_time", nullable = false)
     @Getter @Setter
     LocalDateTime startDateTime;
-    @Column(name = "end_date_time", nullable = false)
+    @Column(name = "end_date_time", nullable = true)
     @Getter @Setter
     LocalDateTime endDateTime;
     public  WeeklyPosology(WeeklyPosologyForm form){
         this.startDateTime = form.getStartDateTime().withSecond(0).withNano(0);
-        this.endDateTime = form.getEndDateTime().withSecond(0).withNano(0);
+        this.endDateTime = form.getEndDateTime() != null ? form.getEndDateTime().withSecond(0).withNano(0)
+                : null;
         this.weeklyPosologyDateTimes = form.getWeeklyPosologyDateTimes().stream().map(WeeklyPosologyDateTime::new)
-                .collect(Collectors.toList());
+                .toList();
         this.weeklyPosologyDateTimes.stream().forEach(date -> date.setWeeklyPosology(this));
     }
 }
